--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@vercel/speed-insights": "^1.3.1",
     "axios": "^1.6.0",
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.555.0",
